.infra/sample-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    service: sample-service
spec:
  selector:
    app: sample-app
  type: NodePort
  ports:
    - port: 80
      nodePort: 31514
